	    backend, but they are presumed to work.

	*2: The CP-10 requires power cycling between prints, for unknown 
	    reasons.

     - Mitsubishi Dye-Sublimation printers:

       Mitsubishi CP3020D/DU/DE (EXPERIMENTAL)
       Mitsubishi CP3020DA/DAE  (EXPERIMENTAL)
       Mitsubishi CP9550D/DW    (EXPERIMENTAL)
       Mitsubishi CP9810D/DW    (EXPERIMENTAL)

	None of these models have been tested and confirmed to work 
	(or not), so feedback is welcome. 

     - Kodak Dye-Sublimation printers:

       Kodak 1400

	The Kodak 1400 requires an intelligent CUPS backend, which is now
	bundled with Gutenprint.

       Kodak 6800 (EXPERIMENTAL)
       Kodak 6850 (EXPERIMENTAL)
       Kodak 605  (EXPERIMENTAL)
       Kodak 805  (EXPERIMENTAL)
       Kodak 9810 (EXPERIMENTAL)
       Kodak 8500 (EXPERIMENTAL)

	None of these models have been tested and confirmed to work 
	(or not), so feedback is welcome.
	
  2) The following Canon printer models were not added, as they cannot
     currently be supported, even experimentally, owing to an as-yet
     unknown command format or other issues:

       Canon PIXMA iP1180
       Canon PIXMA iP1188
       Canon PIXMA iP1880
       Canon PIXMA iP1980
       Canon PIXMA iP2580
       Canon PIXMA iP2680
       Canon PIXMA PRO-10  *1
       Canon PIXMA PRO-100 *1

       *1: protocol is supported but inks used are not yet supported

  3) Corrected page dimensions for borderless printing with Canon
     printers.

  4) Added duplex support for the EPSON WorkForce 645.

  5) Added IEEE1284 device IDs for the following printers.

     - Device IDs added for the following Canon printers:
       Canon SELPHY ES1
       Canon SELPHY ES2
       Canon SELPHY ES3
       Canon SELPHY ES30
       Canon SELPHY CP-100
       Canon SELPHY CP-200
       Canon SELPHY CP-220
       Canon SELPHY CP-330
       Canon SELPHY CP400
       Canon SELPHY CP510
       Canon SELPHY CP600
       Canon SELPHY CP710
       Canon SELPHY CP720