@@ -1,5 +1,5 @@
 /*
- * "$Id: print-olympus.c,v 1.121 2013/06/17 17:37:59 speachy Exp $"
+ * "$Id: print-olympus.c,v 1.122 2013/06/17 17:43:30 speachy Exp $"
  *
  *   Print plug-in DyeSub driver (formerly Olympus driver) for the GIMP.
  *
@@ -2395,7 +2395,111 @@ static void mitsu_cp9810_printer_end(stp_vars_t *v)
     stp_putc(0x56, v);
     stp_putc(0x00, v);
   }
+}
 
+/* Mitsubishi CP-D70D/CP-D707 */
+static const dyesub_pagesize_t mitsu_cpd70x_page[] =
+{
+  { "B7", "3.5x5", PT(1076,300)+1, PT(1568,300)+1, 0, 0, 0, 0,
+  						DYESUB_LANDSCAPE},
+  { "w288h432", "4x6", PT(1228,300)+1, PT(1864,300)+1, 0, 0, 0, 0,
+  						DYESUB_LANDSCAPE},
+  { "w360h504", "5x7", PT(1572,300)+1, PT(2128,300)+1, 0, 0, 0, 0,
+  						DYESUB_PORTRAIT},
+  { "w432h576", "6x8", PT(1868,300)+1, PT(2422,300)+1, 0, 0, 0, 0,
+  						DYESUB_PORTRAIT},
+  { "w432h648", "6x9", PT(1868,300)+1, PT(2730,300)+1, 0, 0, 0, 0,
+  						DYESUB_PORTRAIT},
+  { "Custom", NULL, PT(1220,300)+1, PT(1868,300)+1, 0, 0, 0, 0,
+  						DYESUB_LANDSCAPE},
+};
+
+LIST(dyesub_pagesize_list_t, mitsu_cpd70x_page_list, dyesub_pagesize_t, mitsu_cpd70x_page);
+
+static const dyesub_printsize_t mitsu_cpd70x_printsize[] =
+{
+  { "300x300", "B7", 1076, 1568},
+  { "300x300", "w288h432", 1228, 1864},
+  { "300x300", "w360h504", 1572, 2128},
+  { "300x300", "w432h576", 1868, 2422},
+  { "300x300", "w432h648", 1868, 2730},
+  { "300x300", "Custom", 1220, 1868},
+};
+
+LIST(dyesub_printsize_list_t, mitsu_cpd70x_printsize_list, dyesub_printsize_t, mitsu_cpd70x_printsize);
+
+static const laminate_t mitsu_cpd70x_laminate[] =
+{
+  {"Matte", N_("Matte"), {1, "\x01"}},
+  {"None",  N_("None"),  {1, "\x00"}},
+};
+
+LIST(laminate_list_t, mitsu_cpd70x_laminate_list, laminate_t, mitsu_cpd70x_laminate);
+
+static void mitsu_cpd70x_printer_init(stp_vars_t *v)
+{
+  /* Printer init */
+  stp_putc(0x1b, v);
+  stp_putc(0x45, v);
+  stp_putc(0x54, v);
+  stp_putc(0x01, v);
+  dyesub_nputc(v, 0x00, 508);
+
+  /* Each copy gets this.. */
+  stp_putc(0x1b, v);
+  stp_putc(0x5a, v);
+  stp_putc(0x54, v);
+  stp_putc(0x01, v);
+  dyesub_nputc(v, 0x00, 12);
+  stp_put16_be(privdata.h_size, v);
+  stp_put16_be(privdata.w_size, v);
+
+  if (*((const char*)((privdata.laminate->seq).data)) == 0x01) {
+    /* Laminatte a slightly larger boundary */
+    stp_put16_be(privdata.h_size, v);
+    stp_put16_be(privdata.w_size + 12, v);
+    stp_putc(0x03, v); /* Trigger Superfine */
+  } else {
+    dyesub_nputc(v, 0x00, 4);  /* Ie no Lamination */
+    stp_putc(0x00, v);
+  }
+
+  dyesub_nputc(v, 0x00, 7);
+  stp_putc(0x00, v);  /* XXX Or 0x01 for Lower, 0x02 for Upper */
+  dyesub_nputc(v, 0x00, 479);
+}
+
+static void mitsu_cpd70x_printer_end(stp_vars_t *v)
+{
+  /* If lamination is enabled, generate a lamination plane */
+  if (*((const char*)((privdata.laminate->seq).data)) == 0x01) {
+
+    /* The Windows drivers generate a lamination pattern consisting of
+       four values: 0xab58, 0x286a, 0x6c22 */
+    
+    int r, c;
+
+    /* Now generate lamination pattern */
+    for (c = 0 ; c < privdata.w_size + 12 ; c++) {
+      for (r = 0 ; r < privdata.h_size ; r++) {
+	int i = rand() & 0x1f;
+	if (i < 24)
+	  stp_put16_be(0xab58, v);
+	else if (i < 29)
+	  stp_put16_be(0x286a, v);
+	else
+	  stp_put16_be(0x6c22, v);
+      }
+    }
+    /* Pad up to a 512-byte block */
+    dyesub_nputc(v, 0x00, 512 - ((privdata.h_size * (privdata.w_size + 12) * 2) % 512));
+  }
+}
+
+static void mitsu_cpd70x_plane_end(stp_vars_t *v)
+{
+  /* Pad up to a 512-byte block */
+  dyesub_nputc(v, 0x00, 512 - ((privdata.h_size * privdata.w_size * 2) % 512));
 }
 
 /* Shinko CHC-S9045 (experimental) */
@@ -3073,6 +3177,22 @@ static const dyesub_cap_t dyesub_model_capabilities[] =
     NULL, NULL, /* No block funcs */
     NULL, NULL, NULL, /* color profile/adjustment is built into printer */
     &mitsu_cp9810_laminate_list, NULL,
+  },
+  { /* Mitsubishi CPD70D/CPD707D */
+    4105,
+    &bgr_ink_list,
+    &res_300dpi_list,
+    &mitsu_cpd70x_page_list,
+    &mitsu_cpd70x_printsize_list,
+    SHRT_MAX,
+    DYESUB_FEATURE_FULL_WIDTH | DYESUB_FEATURE_FULL_HEIGHT
+      | DYESUB_FEATURE_PLANE_INTERLACE | DYESUB_FEATURE_16BPP
+      | DYESUB_FEATURE_BIGENDIAN,
+    &mitsu_cpd70x_printer_init, &mitsu_cpd70x_printer_end,
+    NULL, &mitsu_cpd70x_plane_end,
+    NULL, NULL, /* No block funcs */
+    NULL, NULL, NULL, /* color profile/adjustment is built into printer */
+    &mitsu_cpd70x_laminate_list, NULL,
   },
   { /* Shinko CHC-S9045 (experimental) */
     5000, 		
